chore: harden Sprint 4 wrap-up flows